# typescript

./: .PSScriptAnalyzerSettings.psd1  .gitattributes  .gitignore  .jscpd.json  .licensee.json  .lintstagedrc.yml  .mise.toml  .prettierignore  .shellcheckrc  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  Taskfile.yml  USAGE.md  eslint.config.mjs  jsdoc.json  mise.toml  package-lock.json  package.json  pyproject.toml  tsconfig.browser.json  tsconfig.cjs.json  tsconfig.json  typedoc.base.json  typedoc.json  vitest.config.js
.github/: ISSUE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: Bug.md  Documentation.md  Feature.md  Question.md  config.yml
.github/PULL_REQUEST_TEMPLATE/: Bug_fix.md  Documentation.md  Feature.md  Refactor.md
.github/actions/setup-tools/: action.yml
.github/workflows/: auto.retry.yml  ci.build.yml  ci.quality.yml  ci.release.yml  ci.version.yml  ci.yml  release.yml
.husky/: pre-commit  pre-push
.install/: README.md  bootstrap.js
.jscpd/html/: index.html  jscpd-report.json
.npx-install/: README.md  bootstrap.js
.scripts/: fix-mise-pwsh.ps1  fix-mise-pwsh.sh  lint-powershell.ps1  lint-shellcheck.ps1  lint-shellcheck.sh  pwshlint.py  shlint.py
.scripts/pylib/: __init__.py  file_finder.py  linter.py
.taskfiles/: Taskfile.common.yml  Taskfile.deps.yml  Taskfile.quality.yml  Taskfile.sync.yml
src/: cli.js  cli.ts  index.js  index.spec.js  index.ts
src/lib/: greeter.js  greeter.spec.js  greeter.spec.ts  greeter.ts
