[project]
name = "typescript-template-dev"
version = "1.0.0"
description = "Development dependencies for TypeScript template project"
authors = [{ name = "Templ Project" }]
license = { text = "MIT" }
requires-python = ">=3.11"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
# This is a dev-only project with scripts, not a library
packages = [".scripts"]

[dependency-groups]
dev = ["black>=24.0.0", "mypy>=1.10.0", "pylint>=3.0.0", "pytest>=8.0.0", "ruff>=0.4.0"]

# =============================================================================
# Black Configuration
# =============================================================================

[tool.black]
extend-exclude = '''
/(
  .jscpd
  | .npx-install
  | .venv
  | build
  | coverage
  | dist
  | docs-html
  | node_modules
)/
'''
include = '\.pyi?$'
line-length = 88
target-version = ["py311"]

# =============================================================================
# Mypy Configuration
# =============================================================================

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = false # Gradual typing
exclude = [".jscpd", ".npx-install", ".venv", "build", "coverage", "dist", "docs-html", "node_modules"]
ignore_missing_imports = true
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true

# =============================================================================
# Pylint Configuration (PEP 8 compliant)
# =============================================================================

[tool.pylint.basic]
# PEP 8 naming conventions
argument-rgx = "[a-z_][a-z0-9_]{0,50}$"
attr-rgx = "[a-z_][a-z0-9_]{0,50}$"
class-rgx = "[A-Z_][a-zA-Z0-9]+$"
const-rgx = "(([A-Z_][A-Z0-9_]*)|(__.*__))$"
function-rgx = "[a-z_][a-z0-9_]{2,50}$"
good-names = ["_", "f", "fd", "i", "id", "ip", "j", "k", "ok", "x", "y", "z"]
method-rgx = "[a-z_][a-z0-9_]{2,50}$"
module-rgx = "[a-z_][a-z0-9_]*$"
variable-rgx = "[a-z_][a-z0-9_]{0,50}$"

[tool.pylint.design]
max-args = 7
max-branches = 12
max-locals = 15
max-returns = 6
max-statements = 50

[tool.pylint.format]
indent-string = "    "
max-line-length = 88

[tool.pylint.main]
ignore = [".jscpd", ".npx-install", ".venv", "build", "coverage", "dist", "docs-html", "node_modules"]
ignore-patterns = ["^\\."]
jobs = 0
py-version = "3.11"
source-roots = [".scripts"]

[tool.pylint.messages_control]
disable = ["fixme", "import-error", "line-too-long", "too-few-public-methods"]
enable = ["useless-suppression"]

[tool.pylint.similarities]
ignore-imports = true
min-similarity-lines = 6

[tool.pylint.typecheck]
generated-members = []

# =============================================================================
# Pytest Configuration
# =============================================================================

[tool.pytest.ini_options]
addopts = "-v --tb=short"
python_files = ["*_test.py", "test_*.py"]
python_functions = ["test_*"]
testpaths = [".scripts", "tests"]

# =============================================================================
# Ruff Configuration
# =============================================================================

[tool.ruff]
exclude = [".jscpd", ".npx-install", ".venv", "build", "coverage", "dist", "docs-html", "node_modules"]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
ignore = ["E501"]
select = [
  "B", # flake8-bugbear
  "C4", # flake8-comprehensions
  "E", # pycodestyle errors
  "F", # pyflakes
  "I", # isort
  "SIM", # flake8-simplify
  "UP", # pyupgrade
  "W", # pycodestyle warnings
]

[tool.ruff.lint.isort]
known-first-party = []
